--- a/DocLink/Views/Home/Hospitals.cshtml
+++ b/DocLink/Views/Home/Hospitals.cshtml
@@ -2,7 +2,7 @@
 
 <h2 class="text-2xl font-bold mb-6">Hospitals</h2>
 
-<!-- Container for the hospital list -->
+
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
     @foreach (var hospital in Model)
     {
@@ -11,9 +11,10 @@
             <p class="text-gray-600 mt-2">@hospital.Address</p>
          
             
-            <!-- Optional: Add more details if needed -->
             <p class="text-gray-600 mt-1">Contact: @hospital.Phone</p>
             <p class="text-gray-600 mt-1">Email: @hospital.Email</p>
+            
+            <a asp-controller="Hospital" asp-action="Doctors" asp-route-HopitalId="@hospital.Id"><button class="py-1 px-2 bg-blue-500 rounded-md mt-1">See Doctors</button></a>
         </div>
     }
 </div>
